<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_me"
        android:icon="@drawable/ic_me"
        android:title="@string/me"
        app:showAsAction="ifRoom" />
</menu>