<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorOrange">

    <TextView
        android:id="@+id/tv_huy_delete_toolbar"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:textColor="@color/whiteColor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/huy1" />

    <TextView
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/whiteColor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/l_u" />

    <TextView
        android:id="@+id/tv_xoa_delete_toolbar"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:textColor="@color/whiteColor"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/x_a" />

</android.support.v7.widget.Toolbar>
