<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hosiluan.foodanddrink.profilesettingactivity.ProfileSettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_marginRight="5dp"
                    android:id="@+id/img_btn_back_profile_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/thi_t_l_p_t_i_kho_n"
                    android:textColor="@color/whiteColor"
                    android:textSize="19sp" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:weightSum="10">

        <LinearLayout
            android:gravity="end"
            android:layout_weight="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.example.hosiluan.foodanddrink.CircleImage
                android:scaleType="fitCenter"
                android:id="@+id/img_profile_picture_setting"
                android:layout_width="@dimen/img_profile_pic"
                android:layout_height="@dimen/img_profile_pic"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/img_btn_edit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_edit" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/h_t_n"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.5"
                android:textColor="@color/textColorPrimaryLight"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/email"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.5"
                android:textColor="@color/textColorPrimaryLight"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/gi_i_t_nh"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edt_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.5"
                android:textColor="@color/textColorPrimaryLight"
                android:textSize="16sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_save_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrange"
            android:text="@string/l_u_thay_i"
            android:textColor="@color/whiteColor" />
    </LinearLayout>
</LinearLayout>
